# tum_concepts_of_cpp_programming

./: README.md
a00/: .clang-tidy  .deadline  .keep  README.md  assessment.sh  eval.sh
a01/: .clang-tidy  .keep  Dockerfile  README.md
a01/mandelbrot/: CMakeLists.txt  mandelbrot  mandelbrot.cpp
a01/mandelbrot/tests/: test_mandelbrot.cpp
a01/simplevm/: CMakeLists.txt  simplevm.cpp
a01/simplevm/tests/: test_simplevm.cpp
a02/: .clang-format  .clang-tidy  .deadline  .gitignore  .keep  README.md
a02/.devcontainer/: devcontainer.json
a02/header-files/: CMakeLists.txt  eval.sh  main.cpp  math_operations.cpp  math_operations.hpp  print_utils.cpp  print_utils.hpp
a02/header-files/tests/: test_headerfiles.cpp
a02/mistakes/: CMakeLists.txt  eval.sh  mistakes.cpp
a02/mistakes/tests/: test_mistakes.cpp
a03/: .clang-format  .clang-tidy  .deadline  .keep  README.md
a03/sport/: CMakeLists.txt  sport.cpp  sport.hpp
a03/sport/tests/: test_sport.cpp
a03/stockpiles/: CMakeLists.txt  stockpiles.cpp  stockpiles.hpp
a03/stockpiles/tests/: test_stockpiles.cpp
a04/: .deadline  .keep  README.md  assessment.sh
a04/arithmetic/: CMakeLists.txt  complex.cpp  complex.hpp  rational.cpp  rational.hpp
a04/arithmetic/tests/: test_complex.cpp  test_rational.cpp
a04/disjoint_sets/: CMakeLists.txt  disjoint_sets.cpp  disjoint_sets.hpp
a04/disjoint_sets/tests/: test_disjoint_sets.cpp
a05/: .deadline  .keep  README.md
a05/scope/: CMakeLists.txt  Scope.cpp  Scope.hpp  Stopwatch.cpp  Stopwatch.hpp  eval.sh  log.hpp
a05/scope/tests/: test_scope.cpp  test_traits.cpp
a05/tempfs/: CMakeLists.txt  OSApi.cpp  OSApi.hpp  TempDirectory.cpp  TempDirectory.hpp  TempFile.cpp  TempFile.hpp
a05/tempfs/tests/: test_tempfs.cpp  test_traits.cpp  test_utils.hpp
a06/: .clang-tidy  .deadline  .gitignore  .keep  README.md
a06/array/: CMakeLists.txt  array.hpp  eval.sh
a06/array/tests/: test_array.cpp
a06/binary-tree/: CMakeLists.txt  binary-tree.cpp  binary-tree.hpp  eval.sh
a06/binary-tree/tests/: test_binarytree.cpp
a07/: .clang-format  .clang-tidy  .deadline  .keep  Dockerfile  README.md
a07/bitset/: BitSet.cpp  BitSet.hpp  CMakeLists.txt  eval.sh
a07/bitset/tests/: test_bitset.cpp
a07/formatting/: CMakeLists.txt  custom-objects.hpp  eval.sh  formatting.hpp
a07/formatting/tests/: test_formatting.cpp
class/small_vector/: CMakeLists.txt  eval.sh  small_vector.cpp
mock-exam/: .clang-format  .clang-tidy  .deadline  .gitignore  .keep  assessment.sh  summary.txt
mock-exam/memory-allocations/: CMakeLists.txt  exercise.hpp
mock-exam/memory-allocations/tests/: test.cpp
mock-exam/struct-layout-and-inheritance/: CMakeLists.txt  eval.sh  exercise.hpp
mock-exam/struct-layout-and-inheritance/tests/: test.cpp
mock-exam/vector/: CMakeLists.txt  eval.sh  vector.hpp
mock-exam/vector/tests/: test.cpp
